[gd_scene load_steps=6 format=3 uid="uid://dd051qwqy0ugx"]

[ext_resource type="PackedScene" uid="uid://dnu8gkiod6unf" path="res://player.tscn" id="1_8vc0q"]
[ext_resource type="Script" path="res://main.gd" id="1_krqng"]
[ext_resource type="PackedScene" uid="uid://bkmi26thrtnpm" path="res://mob.tscn" id="2_cya5o"]
[ext_resource type="PackedScene" uid="uid://c33ao7i328sgo" path="res://hud.tscn" id="4_q7ohk"]

[sub_resource type="Curve2D" id="Curve2D_p4s5b"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_krqng")
mob_scene = ExtResource("2_cya5o")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_p4s5b")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_q7ohk")]

[node name="Player" parent="." instance=ExtResource("1_8vc0q")]

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="hit" from="Player" to="." method="game_over"]
